feat: db post test

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
-MONGO_URI = mongodb://localhost:27017/festa
-PORT = 8080
+PREV_MONGO_URL=mongodb://ec2-52-78-68-120.ap-northeast-2.compute.amazonaws.com:27017/marketboard
+MONGODB_URL=mongodb://localhost:27017/test
+#MONGO_URL=mongodb+srv://young:1234@coffee.8k84r.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+SECRET_KEY=a23d90asdfj3i1ha
