--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL=mongodb://ec2-13-124-26-175.ap-northeast-2.compute.amazonaws.com:27017/test
+MONGODB_URL=mongodb://ec2-13-209-99-205.ap-northeast-2.compute.amazonaws.com:27017/test
 PREV_MONGODB_URL=mongodb://localhost:27017/test
 SECRET_KEY=a23d90asdfj3i1ha
