--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URL=mongodb://user:password@ec2-13-209-99-205.ap-northeast-2.compute.amazonaws.com:27017/test
-PREV_MONGODB_URL=mongodb://localhost:27017/test
+PREV_MONGODB_URL=mongodb://user:password@ec2-13-209-99-205.ap-northeast-2.compute.amazonaws.com:27017
+MONGODB_URL=mongodb://localhost:27017
 SECRET_KEY=a23d90asdfj3i1ha
