--- a/backend/package.json
+++ b/backend/package.json
@@ -11,18 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.7.36",
     "@types/mongoose-auto-increment": "^5.0.33",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-asyncify": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "mongoose-auto-increment": "^5.0.1",
     "path": "^0.12.7",
