--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.20",
+    "antd": "^4.18.4",
     "axios": "^0.24.0",
     "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
