--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.7.36",
     "@types/mongoose-auto-increment": "^5.0.33",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
@@ -29,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "mongoose-auto-increment": "^5.0.1",
+    "multer": "^1.4.4",
     "path": "^0.12.7",
     "typescript": "^4.5.2"
   }
